# AnkiLink

./: .gitignore  README.md
apk/: settings.gradle.kts
apk/app/: build.gradle.kts
apk/app/src/androidTest/java/com/harry/apk/: ExampleInstrumentedTest.kt
apk/app/src/main/: AndroidManifest.xml
apk/app/src/main/cpp/: AnkiSocket.cpp  AnkiSocket.h  CMakeLists.txt  native-lib.cpp
apk/app/src/main/java/com/harry/apk/: MainActivity.kt
apk/app/src/main/java/com/harry/apk/md/: MarkdownParser.kt
apk/app/src/test/java/com/harry/apk/: ExampleUnitTest.kt
apk/gradle/wrapper/: gradle-wrapper.properties
exe/: AnkiSocket.cpp  CMakeLists.txt  main.cpp
exe/include/: AnkiSocket.h
